--- a/Where2Walk/app/src/main/res/values/strings.xml
+++ b/Where2Walk/app/src/main/res/values/strings.xml
@@ -2,6 +2,7 @@
     <string name="app_name">Where2Walk</string>
     <string name="title_text">Google Sign-In\nQuickstart</string>
 
+
     <!-- Sign-in status messages -->
     <string name="signed_in_fmt">Signed in as: %s</string>
     <string name="signed_in">Signed in</string>
@@ -19,8 +20,6 @@
 
     <!-- Google Login: -->
     <string name="login_comment">Login to Continue</string>
-
-
 
 
     <!-- Google Play Services error for Toast -->
@@ -50,4 +49,5 @@
     <!-- Server Client ID.  This should be a valid Web OAuth 2.0 Client ID obtained
          from https://console.developers.google.com/ -->
     <string name="server_client_id">YOUR_SERVER_CLIENT_ID</string>
+    <string name="title_activity_maps">Map</string>
 </resources>
